tests/baselines/reference/crashIntypeCheckObjectCreationExpression.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
crashIntypeCheckObjectCreationExpression.ts(3,45): error TS2304: Cannot find name 'X'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== crashIntypeCheckObjectCreationExpression.ts (1 errors) ====
    export class BuildWorkspaceService {
        public injectRequestService<P0, P1, P2>(service: P0) {
            this.injectBuildService<number>(new X(service));
                                                ~
!!! error TS2304: Cannot find name 'X'.
        }
        public injectBuildService<P0>(service: P0) {
        }
    }
    